Fix Change logo position and set vertical-align middle

--- a/less/style.less
+++ b/less/style.less
@@ -34,27 +34,31 @@
 		a.btn-icon{ color: #FFFFFF; }
 	}
 
-	.logo{
+	a.logo{
+		width: 20%;
+		position: absolute;
+		top: 0;
+		left: 40%;
 		float: left;
-		display: inline-block;
-		height: 28px;
-		padding: 14px 0%;
-
-		a{
-			font-family: @topic_font;
-			font-size: @title_fontsize;
-			line-height: 1.5em;
-			text-decoration: none;
-			color: #FFFFFF;
-		}
+		display: block;
+		height: 30px;
+		padding: 13px 0%;
+		text-align: center;
+		font-family: @topic_font;
+		text-decoration: none;
+		font-size: 1.2em;
+		line-height: 1em;
+		color: #FFFFFF;
 
 		img{
-			float: left;
-			display: inline-block;
-			height: 28px;
+			height: 30px;
+			vertical-align: middle;
 		}
 
-		span{ margin-left: 14px; }
+		span{
+			margin-left: 5px;
+			vertical-align: middle;
+		}
 	}
 
 	.btn-icon{
